人员管理 编辑

--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -73,7 +73,7 @@
                 </a>
                 <ul class="sidenav-second-level collapse" id="collapseComponents">
                     <li>
-                        <a th:href="@{/users}">查询用户</a>
+                        <a th:href="@{/users/list}">查询用户</a>
                     </li>
                     <li>
                         <a th:href="@{/users/add}">添加用户</a>
