--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -33,7 +33,7 @@
                     <th>状态</th>
                     <th>身份</th>
                     <th>学院</th>
-                    <th>创建/修改时间</th>
+                    <th>创建时间</th>
                     <th>操作</th>
                 </tr>
                 </thead>
