--- a/src/main/resources/templates/facility/edit.html
+++ b/src/main/resources/templates/facility/edit.html
@@ -14,93 +14,89 @@
 
 <div class="content-wrapper">
     <div class="container-fluid">
-        <!-- Breadcrumbs-->
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
                 <a href="#" th:text="${facilityModel.title}">流水管理</a>
             </li>
             <li class="breadcrumb-item active" th:text="${facilityModel.subtitle}">信息查询</li>
         </ol>
-        <!-- Example DataTables Card-->
-        <div class="card mb-3">
-            <div class="card-body">
-                <div class="table-responsive">
-                    <form action="/users" th:action="@{~/facility/save}" method="POST" th:object="${facilityModel.facility}" role="form">
-                        <div class="form-group">
-                            <label for="name">
-                                名字：
-                            </label>
+        <div class="card-body">
+            <div class="col-md-6 offset-md-3">
+                <form action="/users" th:action="@{~/facility/save}" method="POST" th:object="${facilityModel.facility}"
+                      role="form">
+                    <div class="form-group">
+                        <label for="name" class="form-inline">名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;字：
                             <input hidden="hidden" name="fid" th:value="*{fid}">
-                            <input  type="text" id="name" name="name" th:value="*{name}" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="locate">
-                                地点：
-                            </label>
-                            <select id="locate" name="locate" th:value="*{locate}" class="form-group">
+                            <input type="text" id="name" name="name" th:value="*{name}" class="form-control col-md-8"></label>
+
+                    </div>
+                    <div class="form-group">
+                        <label for="locate" class="form-inline">地&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;点：
+                            <select id="locate" name="locate" th:value="*{locate}" class="form-group col-md-8">
                                 <option th:each="locate1:${facilityModel.thirdLocateList}"
                                         th:value="${locate1.id}" th:text="${locate1.address}"
-                                th:selected="${locate1.id} == *{locate}">单进</option>
+                                        th:selected="${locate1.id} == *{locate}">单进
+                                </option>
                             </select>
+                        </label>
 
-                        </div>
-                        <div class="form-group">
-                            <label for="startTime">
-                                开始时间
-                            </label>
-                            <input type="time" id="startTime" name="startTime" th:value="${#dates.format(facilityModel.facility.startTime,'HH:mm:ss')}" class="form-control">
 
-                        </div>
-                        <div class="form-group">
-                            <label for="endTime">
-                                关闭时间
-                            </label>
-                            <input type="time" id="endTime" name="endTime" th:value="${#dates.format(facilityModel.facility.endTime,'HH:mm:ss')}" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="startTime" class="form-inline">开始时间：
+                            <input type="time" id="startTime" name="startTime"
+                                   th:value="${#dates.format(facilityModel.facility.startTime,'HH:mm:ss')}"
+                                   class="form-control col-md-8">
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label for="endTime" class="form-inline">关闭时间：
+                            <input type="time" id="endTime" name="endTime"
+                                   th:value="${#dates.format(facilityModel.facility.endTime,'HH:mm:ss')}"
+                                   class="form-control col-md-8">
+                        </label>
 
-                        </div>
-                        <div class="form-group">
-                            <label for="permission">
-                                权限：
-                            </label>
-                            <input type="text" id="permission" name="permission" th:value="*{permission}" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="type">
-                                类型：
-                            </label>
-                            <select id="type" name="type" th:value="*{type}" class="form-group">
-                                <option  th:selected="*{type =='单进' }" th:value="1">单进</option>
-                                <option  th:selected="*{type =='单出' }" th:value="2">单出</option>
-                                <option  th:selected="*{type =='双向' }" th:value="3">双向</option>
+
+                    </div>
+                    <div class="form-group">
+                        <label for="permission" class="form-inline">权&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;限：
+                            <input type="text" id="permission" name="permission" th:value="*{permission}"
+                                   class="form-control col-md-8">
+                        </label>
+
+                    </div>
+                    <div class="form-group">
+                        <label for="type" class="form-inline">类&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;型：
+                            <select id="type" name="type" th:value="*{type}" class="form-group col-md-8">
+                                <option th:selected="*{type =='单进' }" th:value="1">单进</option>
+                                <option th:selected="*{type =='单出' }" th:value="2">单出</option>
+                                <option th:selected="*{type =='双向' }" th:value="3">双向</option>
                             </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="status">
-                                状态：
-                            </label>
-                            <select id="status" name="status" th:value="*{status}" class="form-group">
-                                <option  th:selected="*{status ==1 }" th:value="1">关闭</option>
-                                <option  th:selected="*{status ==2 }" th:value="2">开放</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="ipAddr">
-                                本机IP：
-                            </label>
-                            <input type="text" id="ipAddr" name="ipAddr" th:value="*{ipAddr}" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="serverIp">
-                                服务器IP：
-                            </label>
-                            <input type="text" id="serverIp" name="serverIp" th:value="*{serverIp}" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <input type="submit" value="提交" class="btn btn-primary">
+                        </label>
 
-                        </div>
-                    </form>
-                </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="status" class="form-inline">状&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;态：
+                            <select id="status" name="status" th:value="*{status}" class="form-group col-md-8">
+                                <option th:selected="*{status ==1 }" th:value="1">关闭</option>
+                                <option th:selected="*{status ==2 }" th:value="2">开放</option>
+                            </select>
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label for="ipAddr" class="form-inline">本&nbsp;&nbsp;机&nbsp;&nbsp;IP：
+                            <input type="text" id="ipAddr" name="ipAddr" th:value="*{ipAddr}" class="form-control col-md-8">
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label for="serverIp" class="form-inline">服务器IP：
+                            <input type="text" id="serverIp" name="serverIp" th:value="*{serverIp}" class="form-control col-md-8">
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="提交" class="btn btn-primary form-group offset-4">
+                    </div>
+                </form>
             </div>
         </div>
     </div>
