--- a/src/main/resources/templates/whitelist/add.html
+++ b/src/main/resources/templates/whitelist/add.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <title>查看</title>
+    <title th:text="${whitelistMode.title}">查看</title>
 
     <!--公共css-->
     <div th:include="common_css :: common_css"></div>
@@ -18,50 +18,43 @@
         <!-- Breadcrumbs-->
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="#">白名单管理</a>
+                <a href="#" th:text="${whitelistMode.title}">白名单管理</a>
             </li>
-            <li class="breadcrumb-item active">白名单添加</li>
+            <li class="breadcrumb-item active" th:text="${whitelistMode.subtitle}">白名单添加</li>
         </ol>
-            <div class="card-body">
-                <div class="table-responsive">
-                    <form action="/whitelist/add/" th:action="@{/whitelist}" method="POST" role="form">
-                        <div class="form-group">
-                            <label for="cardid">
-                                卡号：
-                            </label>
-                            <input type="text" id="cardid" name="cardid"  class="form-control">
-
-                        </div>
-                        <div class="form-group">
-                            <label for="startDate">
-                                开始日期
-                            </label>
-                            <input type="date" id="startDate" name="startDate"  class="form-control">
-
-                        </div>
-                        <div class="form-group">
-                            <label for="endDate">
-                                结束日期
-                            </label>
-                            <input type="date" id="endDate" name="endDate" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="vip">
-                                VIP：
-                            </label>
-                                <!--<input type="text" id="sex" name="sex" value="1" class="form-control">-->
-                                <select id="vip" name="vip">
-                                    <option name="vip" value="1" >是</option>
-                                    <option name="vip"  value="0" >否</option>
-                                </select>
-                        </div>
-                        <div class="form-group">
-                            <input type="submit" value="提交" class="btn btn-primary">
-
-                        </div>
-                    </form>
-                </div>
+        <div class="">
+            <div class="col-md-6 offset-md-3">
+                <form action="/whitelist/add/" th:action="@{/whitelist}" method="POST" role="form"
+                      class="form-horizontal">
+                    <div class="form-group">
+                        <label for="cardid" class="form-inline col-md-auto">卡&nbsp;&nbsp;&nbsp;&nbsp;号：
+                            <input type="text" id="cardid" name="cardid" class="form-control col-md-8 ">
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label for="startDate" class="form-inline col-md-auto">开始日：
+                            <input type="date" id="startDate" name="startDate" class="form-control col-md-8 ">
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label for="endDate" class="form-inline col-md-auto">结束日：
+                            <input type="date" id="endDate" name="endDate" class="form-control col-md-8 ">
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label for="vip" class="form-inline col-md-auto">V I P&nbsp;&nbsp;&nbsp;&nbsp;：
+                            <select id="vip" name="vip" class="form-control col-md-8">
+                                <option name="vip" value="1">是</option>
+                                <option name="vip" value="0">否</option>
+                            </select>
+                        </label>
+                    </div>
+                    <div class="form-group col-md-6 offset-md-2">
+                        <input type="submit" value="提交" class="btn btn-primary">
+                    </div>
+                </form>
             </div>
+        </div>
     </div>
     <!-- /.container-fluid-->
     <!-- /.content-wrapper-->
