--- a/src/main/resources/templates/record/facility.html
+++ b/src/main/resources/templates/record/facility.html
@@ -99,7 +99,7 @@
         </ol>
         <div class="container">
             <div class="row clearfix">
-                <div class="col-md-6 column">
+                <div class="col-md-6 offset-md-3">
                     <form id="form2" class="form-group" role="form" action="/record/search">
                         <div class="form-group" style="width: auto">
                             <label for="fid" class="col-md-3 form-group">考勤机名称</label>
