--- a/src/main/resources/templates/record/individual.html
+++ b/src/main/resources/templates/record/individual.html
@@ -105,7 +105,7 @@
         </ol>
         <div class="container">
             <div class="row clearfix">
-                <div class="col-md-6 column">
+                <div class="col-md-6 offset-md-3">
                     <form id="form2" class="form-group" role="form" action="/record/individualSearch">
                         <div class="form-group" style="width: auto">
                             <div class="form-group" style="width: auto">
@@ -126,7 +126,7 @@
                         </div>
                     </form>
                     <div class="col-md column text-xl-center">
-                        <button type="button" onclick="search()" class="btn btn-default btn-warning form-group">查询
+                        <button type="button" onclick="search()" class="btn btn-default btn-warning  offset-md-0">查询
                         </button>
                     </div>
                 </div>
