--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -41,6 +41,14 @@
                     <li>
                         <a href="./facility/list.html" th:href="@{~/facility/list}">设备管理</a>
                     </li>
+                </ul>
+            </li>
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
+                <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents4">
+                    <i class="fa fa-fw fa-coffee"></i>
+                    <span class="nav-link-text">工作区设置管理</span>
+                </a>
+                <ul class="sidenav-second-level collapse" id="collapseComponents4">
                     <li>
                         <a href="./locate/edit.html" th:href="@{~/locate/edit}">工作区列表</a>
                     </li>
@@ -48,9 +56,10 @@
                         <a href="./locate/add.html" th:href="@{~/locate/add}">工作区添加</a>
                     </li>
                 </ul>
-
-
             </li>
+
+
+
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
                 <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents2">
                     <i class="fa fa-fw fa-floppy-o"></i>
