--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -116,11 +116,13 @@
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link fa-calendar" th:text="${#dates.format(new java.util.Date().getTime(), 'yyyy-MM-dd')}"></a>
+                <a class="nav-link " th:text="'当前日期：'+${#dates.format(new java.util.Date().getTime(), 'yyyy-MM-dd')}">
+                    <i class="fa fa-fw fa-calendar"></i>
+                </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link  fa-user " th:text="'用户'">
-                    用户：王松涛！></a>
+                <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
+                    <i class="fa fa-fw fa-user"></i>用户</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
